<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuMainNavigationHome"
        android:icon="@drawable/home"
        android:title="@string/main_section_home" />
    <item
        android:id="@+id/menuMainNavigationMessenger"
        android:icon="@drawable/comment"
        android:title="@string/main_section_messenger" />
    <item
        android:id="@+id/menuMainNavigationWorkspace"
        android:icon="@drawable/workspace"
        android:title="@string/main_section_workspace" />
    <item
        android:id="@+id/menuMainNavigationServices"
        android:icon="@drawable/services"
        android:title="@string/main_section_services" />
    <item
        android:id="@+id/menuMainNavigationSettings"
        android:icon="@drawable/settings"
        android:title="@string/main_section_settings" />
</menu>
